[package]
name = "chrome-sys"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aspectron/chrome-sys"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
exclude = ["/.*", "/test"]
keywords = ["chrome","bindings"]
categories = ["wasm","api-bindings"]
description = """
Raw wasm_bindgen bindings for the Chrome Extension API.
"""

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4"
thiserror = "1.0.47"

